# magma

./: ChangeLog  INSTALL  NAMESPACE  configure  configure.ac
R/: AllGenerics.r  Classes.r  magAriths.r  magFactors.r  magSolvers.r  magUtils.r
inst/: CITATION
man/: backsolve.Rd  gpu.Rd  lu.Rd  magma-class.Rd  magma.Rd
src/: Makefile.in  magAriths.c  magAriths.h  magFactors.c  magFactors.h  magSolvers.c  magSolvers.h  magUtils.c  magUtils.h
